<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SearchFragment"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:singleLine="true"
        android:hint="@string/title_search"
        android:drawableStart="@drawable/search_ico"
        android:drawableEnd="@drawable/close_ico"
        android:textColorHint="@color/lightGray"
        android:paddingStart="8dp"
        android:paddingEnd="7dp"
        android:drawablePadding="12dp"
        android:imeOptions="actionSend"/>

    <TextView
        android:id="@+id/searchPrompt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="438dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginTop="222dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Search_prompt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBooks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="438dp"
        android:visibility="invisible"
        android:fontFamily="@font/roboto"
        android:text="@string/Error_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="438dp"
        android:visibility="invisible"
        android:fontFamily="@font/roboto"
        android:text="@string/Empty_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reloadButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/Try_again"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPrompt" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminateTint="@color/black"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="168dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>